--- a/newtab.html
+++ b/newtab.html
@@ -10,33 +10,6 @@
 </head>
 
 <body>
-  <script>
-    // Initialize with banner and ensure input focus
-    window.addEventListener("load", function () {
-      // Display banner
-      const terminal = document.querySelector('.terminal');
-      const banner = document.createElement('div');
-      banner.className = 'command-output banner';
-      banner.style.whiteSpace = 'pre';
-      banner.innerHTML = `
-   _____ _      _____ ____                                     
-  / ____| |    |_   _|  _ \\                                    
- | |    | |      | | | |_) |_ __ _____      _____  ___ _ __ 
- | |    | |      | | |  _ <| '__/ _ \\ \\ /\\ / / __|/ _ \\ '__|
- | |____| |____ _| |_| |_) | | | (_) \\ V  V /\\__ \\  __/ |   
-  \\_____|______|_____|____/|_|  \\___/ \\_/\\_/ |___/\\___|_|   
-                                                              
-  Type 'help' for available commands
-`;
-      terminal.insertBefore(banner, terminal.firstChild);
-
-      // Ensure input focus
-      setTimeout(function () {
-        const input = document.getElementById("commandInput");
-        if (input) input.focus();
-      }, 0);
-    });
-  </script>
   <div class="terminal-header">
     <div class="terminal-title">
       <div class="terminal-icon"></div>
@@ -53,6 +26,7 @@
     </div>
   </div>
   <div class="terminal">
+    <!-- The banner and terminal content will be dynamically inserted by newtab.js -->
     <div class="command-line">
       <span class="prompt">browser&gt;</span>
       <span class="cursor">_</span>
